<resources>
    <string name="app_name">Nocca Ventilator</string>
    <string name="home">Home</string>
    <string name="patient_id__">Patient ID: %1$s</string>
    <string name="patient_info">Patient\nInfo</string>
    <string name="pre_use_check">Pre-Use\nCheck</string>
    <string name="ventilation_mode">Ventilation\nMode</string>
    <string name="standby">Standby</string>
    <string name="last_four_days">Last 4\nDays</string>
    <string name="clear_data">Clear\nData</string>
    <string name="add_new_patient">Add New\nPatient</string>
    <string name="cpap">CPAP</string>
    <string name="pc_ac">PC-AC</string>
    <string name="pc_cmv">PC-CMV</string>
    <string name="inlet_pump_test">Inlet pump test</string>
    <string name="outlet_pump_test">Outlet pump test</string>
    <string name="lead_tube_test">Lead tube test</string>
    <string name="buzzer">Buzzer</string>
    <string name="pressure_transducer_test">Pressure transducer test</string>
    <string name="device_admin_description">Nocca app is admin app for this device</string>
    <string name="grant_admin">Nocca Ventilator app locks the device to work consistently on device</string>
    <string name="start">Start</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="pip">PIP</string>
    <string name="peep">PEEP</string>
    <string name="vte">VTe</string>
    <string name="rr">RR</string>
    <string name="pt_graph">P-T Graph</string>
    <string name="v_tgraph">V-T Graph</string>
    <string name="flow_rate_n_i_min_t">Flow Rate\n(I/min) - T</string>
    <string name="please_enter_new_patient_details">Please enter new patient details</string>
    <string name="patient_name">Patient Name</string>
    <string name="save">Save</string>
    <string name="patient_id">Patient ID</string>
    <string name="name">Name</string>
    <string name="date_time">Date-Time</string>
    <string name="identifier">Identifier</string>
    <string name="operation">Operation</string>
    <string name="data">Data</string>
    <string name="delete">Delete</string>
    <string name="type_admin_password_to_proceed">Type admin password to proceed</string>
    <string name="password">Password</string>
    <string name="no_data">--</string>
</resources>
