<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btPatientInfo"
        android:text="@string/patient_info"
        style="@style/CircleButton"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btStandby"
        android:text="@string/standby"
        style="@style/CircleButton"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btPreCheck"
        style="@style/CircleButton.Large"
        android:text="@string/pre_use_check"
        android:layout_marginStart="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btVentilatorMode"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btVentilatorMode"
        style="@style/CircleButton.Large"
        android:text="@string/ventilation_mode"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btPreCheck"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>