<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btPC_CVM"
        android:text="@string/pc_cmv"
        style="@style/CircleButton.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btPC_AC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btPC_AC"
        android:text="@string/pc_ac"
        style="@style/CircleButton.Large"
        app:layout_constraintStart_toEndOf="@id/btPC_CVM"
        app:layout_constraintEnd_toStartOf="@+id/btCPAP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/btCPAP"
        android:text="@string/cpap"
        style="@style/CircleButton.Large"
        app:layout_constraintStart_toEndOf="@id/btPC_AC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>