<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:orientation="vertical"
    >
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center_vertical"
        >
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:id="@+id/tvDate"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/date_time"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:id="@+id/tvIdentifier"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/identifier"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:id="@+id/tvOperation"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/operation"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
        <TextView
            android:id="@+id/tvData"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/data"
            android:gravity="center"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorWhite"
        />
</LinearLayout>