<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_admin_password_to_proceed"
        android:textSize="18sp"
        android:padding="40dp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/password"
        android:textColor="@android:color/black"
        android:inputType="textWebPassword"
        android:textColorHint="@color/colorWhite40"
        android:backgroundTint="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordLabel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btConfirm"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btConfirm"
        android:layout_width="115dp"
        android:layout_height="44dp"
        android:background="@drawable/button_bg"
        android:text="@string/delete"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/etPassword"
        />

</androidx.constraintlayout.widget.ConstraintLayout>