<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvPTLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pt_graph"
        android:textSize="17sp"
        android:rotation="-90"
        app:layout_constraintTop_toTopOf="@+id/lcPT"
        app:layout_constraintBottom_toBottomOf="@+id/lcPT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lcPT"
        />
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lcPT"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@drawable/graph_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPTLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/lcVT"
        />
    <TextView
        android:id="@+id/tvVTLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/v_tgraph"
        android:textSize="17sp"
        android:rotation="-90"
        app:layout_constraintTop_toTopOf="@+id/lcVT"
        app:layout_constraintBottom_toBottomOf="@+id/lcVT"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lcVT"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@drawable/graph_bg"
        app:layout_constraintTop_toBottomOf="@id/lcPT"
        app:layout_constraintBottom_toTopOf="@+id/lcFR"
        app:layout_constraintStart_toStartOf="@id/lcPT"
        app:layout_constraintEnd_toEndOf="@id/lcPT"
        />
    <TextView
        android:id="@+id/tvFRLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flow_rate_n_i_min_t"
        android:textSize="17sp"
        android:rotation="-90"
        app:layout_constraintTop_toTopOf="@+id/lcFR"
        app:layout_constraintBottom_toBottomOf="@+id/lcFR"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lcFR"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:background="@drawable/graph_bg"
        app:layout_constraintTop_toBottomOf="@id/lcVT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/lcPT"
        app:layout_constraintEnd_toEndOf="@id/lcPT"
        />
</androidx.constraintlayout.widget.ConstraintLayout>